<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/menu_background"
    android:padding="@dimen/bp_margin">

    <TextView
        android:id="@+id/titleText"
        style="@style/Text.BreakoutPlus.Title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/titleSubtitle"
        style="@style/Text.BreakoutPlus.Subtitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_tagline"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleText" />

    <LinearLayout
        android:id="@+id/mainButtonColumn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/titleSubtitle">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonPlay"
            style="@style/Widget.BreakoutPlus.Button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/title_play" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonChallenges"
            style="@style/Widget.BreakoutPlus.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bp_button_gap"
            android:text="@string/title_daily_challenges" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonScoreboard"
            style="@style/Widget.BreakoutPlus.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bp_button_gap"
            android:text="@string/title_scoreboard" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonSettings"
            style="@style/Widget.BreakoutPlus.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bp_button_gap"
            android:text="@string/title_settings" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonHowTo"
            style="@style/Widget.BreakoutPlus.Button.Secondary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/bp_button_gap"
            android:text="@string/title_howto" />

    </LinearLayout>

    <TextView
        android:id="@+id/deviceHint"
        style="@style/Text.BreakoutPlus.Caption"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/label_device_hint"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
